# FFmpeg7-SDL2_Linux

./: .gitignore  Audio_Video_Player.cpp  CMakeLists.txt  README.md  README_en.md
